--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
+    "react-datepicker": "^4.6.0",
+    "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-test-renderer": "^17.0.2",
