--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ deliverator-log.md
 .env.development.local
 .env.test.local
 .env.production.local
+deliverator.rar
 
 npm-debug.log*
 yarn-debug.log*
